# energyunits

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CRITICAL_ANALYSIS.md  DATA_SOURCES.md  OVERNIGHT_WORK_SUMMARY.md  README.md  RELEASE.md  RELEASE_READINESS_v0.1.0.md  codecov.yml  pyproject.toml
.github/workflows/: publish-test.yml  publish.yml  workflow.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
energyunits/: __init__.py  exceptions.py  exchange_rate.py  inflation.py  main.py  pandas_tools.py  quantity.py  registry.py  substance.py  units.py
energyunits/data/: exchange_rates.json  inflation.json  substances.json  units.json
examples/: development.py  etc.py  example_use_cases.py
tests/: test_complex_conversion_chains.py  test_compound_units.py  test_edge_cases.py  test_error_handling.py  test_error_handling_comprehensive.py  test_fallback_removal.py  test_inflation_adjustment.py  test_inflation_integration.py  test_integration.py  test_main.py  test_pandas_integration_expanded.py  test_quantity.py  test_readme_examples.py  test_registry.py  test_registry_extensibility.py  test_smart_unit_cancellation.py  test_substance_conversions.py  test_v020_features.py  test_year_dependent_currency.py
