[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energyunits"
version = "0.1.0"
authors = [
  { name="Martin Klein", email="hi@martinklein.co" },
]
description = "A Python library for handling units, conversions, and calculations in energy system modeling."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["energy", "units", "conversion", "modeling"]
license = "MIT"
dependencies = [
    "numpy>=1.26.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
dev = [
    "black>=24.3.0",
    "isort>=5.12.0",
    "sphinx>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/0-k/energyunits"
"Documentation" = "https://energyunits.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/0-k/energyunits/issues"
"Source Code" = "https://github.com/0-k/energyunits"
"Changelog" = "https://github.com/0-k/energyunits/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["energyunits*"]

[tool.setuptools.package-data]
energyunits = ["data/*.json"]